	William Lyvers
	Sakari Maaranen
	Jan Materne
	Markus M. May
	Abel Muino
	J. Lewis Muir
	Stephen Nesbitt
	Joshua Nichols
	Bernard Niset
	David Maplesden
	Glen Marchesani
	Phil Messenger
	Steve Miller
	Mathias Muller
	Randy Nott
	Peter Oxenham
	Jesper Pedersen
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Carl Quinn
	Damon Rand
	Geoff Reedy
	Torkild U. Resheim
	Christian Riege
	Andreas Sahlbach
	Brian Sanders
	Adrian Sandor
	Michael Scheetz
	Ruslan Shevchenko
	John Shields
	Simon Steiner
	Johan Stuyts
	John Tinetti
	Jason Trump
	Tjeerd Verhagen
	Richard Vowles
	Sven Walter
	James P. White
	Tom Widmer
	John Williams
	Chris Wood
	Patrick Woodworth
	Jaroslaw Wypychowski
	Aleksey Zhukov
	
   trunk
=====================================
- DOCUMENTATION: The tag version-matchers is missing attribute in documentation (IVY-1292) (thanks to Per Arnold Blaasmo)
- DOCUMENTATION: wrong default resolver documented on the 'How does it work' page (IVY-1265)
- DOCUMENTATION: Correct outdated links to configuration pages (IVY-1266)

- NEW: New Ant datatype ivy:resources, an Ant resource collection like ivy:cachepath or ivy:cachefileset (IVY-334)
- NEW: ivy:resolve and post resole task can now have inlined dependencies declaration.
- NEW: Import Bushel into Ivy core (IVY-1241)
- NEW: An new resolver 'mirroredurl' which can handle a list of mirrored URL repositories

- IMPROVEMENT: Added support for dynamic revisions in <extends> tag (IVY-1281) (thanks to Jean-Louis Boudart)
- IMPROVEMENT: ivy:makepom child element dependency should support the type and classifier attributes (IVY-1262)
- IMPROVEMENT: ivy:retrieve can now create a path or fileset containing the retrieved artifacts (IVY-1235)
- IMPROVEMENT: Improve diagnostics in ssh resolver (IVY-1267) (thanks to Stepan Koltsov)
- IMPROVEMENT: ivy:retrieve can now convert 'dotted'-organisation names into a directory tree.
- IMPROVEMENT: ivy:retrieve now accepts a nested mapper type.
