@@ -239,6 +239,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|ExcludeRule
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|ModuleDescriptor
 import|;
 end_import
@@ -1863,6 +1881,33 @@ literal|"<optional>true</optional>"
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|canExclude
+argument_list|()
+condition|)
+block|{
+name|printExclusions
+argument_list|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|getAllExcludeRules
+argument_list|()
+argument_list|,
+name|out
+argument_list|,
+name|indent
+argument_list|)
+expr_stmt|;
+block|}
 name|indent
 argument_list|(
 name|out
@@ -1901,6 +1946,171 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+specifier|private
+specifier|static
+name|void
+name|printExclusions
+parameter_list|(
+name|ExcludeRule
+index|[]
+name|exclusions
+parameter_list|,
+name|PrintWriter
+name|out
+parameter_list|,
+name|int
+name|indent
+parameter_list|)
+block|{
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<exclusions>"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|exclusions
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|4
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<exclusion>"
+argument_list|)
+expr_stmt|;
+name|ExcludeRule
+name|rule
+init|=
+name|exclusions
+index|[
+name|i
+index|]
+decl_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|5
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<groupId>"
+operator|+
+name|rule
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+operator|+
+literal|"</groupId>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|5
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<artifactId>"
+operator|+
+name|rule
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"</artifactId>"
+argument_list|)
+expr_stmt|;
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|4
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</exclusion>"
+argument_list|)
+expr_stmt|;
+block|}
+name|indent
+argument_list|(
+name|out
+argument_list|,
+name|indent
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</exclusions>"
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 specifier|static
