@@ -92,6 +92,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 	Geoff Reedy
 	Torkild U. Resheim
 	Christian Riege
+	Jens Rohloff
 	Andreas Sahlbach
 	Brian Sanders
 	Adrian Sandor
@@ -124,6 +125,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - NEW: Import Bushel into Ivy core (IVY-1241)
 - NEW: An new resolver 'mirroredurl' which can handle a list of mirrored URL repositories
 
+- IMPROVEMENT: ivy:makepom now honors exclusion of artifacts in generated pom files (IVY-1294) (thanks to Jens Rohloff)
 - IMPROVEMENT: Added support for dynamic revisions in <extends> tag (IVY-1281) (thanks to Jean-Louis Boudart)
 - IMPROVEMENT: ivy:makepom child element dependency should support the type and classifier attributes (IVY-1262)
 - IMPROVEMENT: ivy:retrieve can now create a path or fileset containing the retrieved artifacts (IVY-1235)
